
message(STATUS "configure SRC ${PROJECT_NAME}")

set(SOURCE_FILES main.cpp tcpping.cpp)

add_executable(${PROJECT_NAME} ${SOURCE_FILES})

message(STATUS "CMAKE_INSTALL_PREFIX=${CMAKE_INSTALL_PREFIX}")

install(TARGETS ${PROJECT_NAME}
        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
        )